# TSAI_EAG_V2_mini_capstone_S10

./: .gitignore  README.md  main.py  pyproject.toml  web_app.py
agent_base_lib/: __init__.py  test_agent_base.py
agent_base_lib/agents/: base_agent.py
agent_base_lib/core/: __init__.py  context.py  enums.py  result.py  state_transition.py
agent_base_lib/stages/: __init__.py  base_stage.py  base_sub_agent.py  cognitive_stage.py  execution_stage.py  validation_stage.py
agent_base_lib/stages/cognitive/: __init__.py  context_retrieval.py  decision.py  perception.py  planning.py
agent_base_lib/stages/execution/: __init__.py  action.py  observation.py  tool_selection.py
agent_base_lib/stages/validation/: __init__.py  reflection.py  validator.py
config/: __init__.py  project_config.py  project_config.yaml
llm_api_lib/: __init__.py  cli.py  core.py  default_config.yaml
logging_lib/: __init__.py  config.py  default_config.yaml
mcp_lib/: __init__.py  default_mcp_config.yaml  mcp_server_documents.py  mcp_server_math.py  mcp_server_websearch.py  models.py  multi_mcp.py  server_utils.py  test_mcp_servers.py
memory_lib/: __init__.py  config.py  default_config.yaml  test_document_rag.py  test_vector_memory.py  vector_memory.py
query_lib/: __init__.py  query_context.py  query_functions.py  test_query_methods.py
session_lib/: __init__.py  config.py  default_config.yaml  session_logger.py
web/: index.html  test_web_app.py
web/static/: app.js  styles.css
